<?xml version="1.0" ?>
<package>
	<name>asr_msgs</name>
	<version>1.0.0</version>
	<description>
	  This package contains all messages that are particular to our Active Scene Recognition - Framework at 
		Humanoids and Intelligence Systems Lab (HIS), Karlsruhe Institute of Technology (KIT).
	  These messages make up the interfaces between the different collaborating components of this system.
	  They are of critical importance and structured by the ROS communication capabilities.
	</description>
	<author>Kleinert Daniel, Meißner Pascal, Yi Xie</author>
	<maintainer email="asr-ros@lists.kit.edu">Meißner Pascal</maintainer>
        <license>BSD</license>
	<url type="website">http://ros.org/wiki/asr_msgs</url>

	<buildtool_depend>catkin</buildtool_depend>
	<build_depend>std_msgs</build_depend>
	<build_depend>geometry_msgs</build_depend>
	<build_depend>sensor_msgs</build_depend>
	<build_depend>message_generation</build_depend>
	
	<run_depend>std_msgs</run_depend>
	<run_depend>geometry_msgs</run_depend>
	<run_depend>sensor_msgs</run_depend>
	<run_depend>message_runtime</run_depend>
</package>
