<package format="2">
  <name>auv_msgs</name>
  <version>0.1.1</version>
  <description>This package provides message types commonly used with Autonomous Underwater Vehicles</description>
  <maintainer email="bence.magyar.robotics@gmail.com">Bence Magyar</maintainer>
  <maintainer email="ignacio.carlucho@gmail.com">Ignacio Carlucho</maintainer>
  <author>Ocean Systems Lab, Heriot-Watt University</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geographic_msgs</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
