<?xml version="1.0"?>
<package format="2">
  <name>bagger</name>
  <version>0.1.3</version>
  <description>An application used to systematically record rosbags</description>
  <license>BSD</license>

  <maintainer email="bgibbons@squarerobots.com">Brenden Gibbons</maintainer>
  <url type="website">http://www.ros.org/wiki/bagger</url>
  <url type="repository">https://github.com/squarerobot/bagger</url>
  <url type="bugtracker">https://github.com/squarerobot/bagger/issues</url>
  <author email="bgibbons@squarerobots.com">Brenden Gibbons</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>rostest</depend>

  <build_depend>message_generation</build_depend>
  <build_depend>roslint</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>rosbag</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <test_depend>nav_msgs</test_depend>
  <test_depend>geometry_msgs</test_depend>

</package>
