<package>

  <name>camera_info_manager_py</name>
  <version>0.2.3</version>
  <description>
    Python interface for camera calibration information.

    This ROS package provides a CameraInfo interface for Python camera
    drivers similar to the C++ camera_info_manager package.
  </description>
  <maintainer email="jack.oquin@gmail.com">Jack O'Quin</maintainer>
  <author>Jack O'Quin</author>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/camera_info_manager_py</url>
  <url type="repository">https://github.com/ros-perception/camera_info_manager_py.git</url>
  <url type="bugtracker">https://github.com/ros-perception/camera_info_manager_py/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>rostest</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>python-rospkg</run_depend>
  <run_depend>python-yaml</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>

  <test_depend>rosunit</test_depend>

  <export>
    <rosdoc config="rosdoc.yaml" />
  </export>

</package>

