<package format="2">
  <name>cob_supported_robots</name>
  <version>0.6.14</version>
  <description>This package contains the list of supported robots within the care-o-bot family.</description>

  <license>Apache 2.0</license>

  <url type="website">http://ros.org/wiki/cob_supported_robots</url>

  <maintainer email="felixmessmer@gmail.com">Felix Messmer</maintainer>
  <author email="fxm@ipa.fhg.de">Felix Messmer</author>
  <author email="mathias.luedtke@ipa.fraunhofer.de">Mathias Lüdtke</author>

  <buildtool_depend>catkin</buildtool_depend>

</package>
