<package>
  <name>convex_decomposition</name>
  <version>0.1.12</version>
  <description>Convex Decomposition Tool for Robot Model</description>
  <author email="jratcliff@infiniplex.net">John W. Ratcliff</author>

  <maintainer email="ros-orphaned-packages@googlegroups.com">ROS Orphaned Package Maintainers</maintainer>

  <license>MIT</license>
  <url type="website">http://codesuppository.blogspot.com</url>
  <url type="bugtracker">http://kforge.ros.org/robotmodel/Trac</url>
  <url type="repository">http://kforge.ros.org/robotmodel/convex_decomposition</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>unzip</build_depend>

  <run_depend>unzip</run_depend>
</package>
