<?xml version="1.0"?>
<package format="3">
  <name>dynamic-graph-tutorial</name>
  <version>1.2.2</version>
  <description>
    Dynamic graph tutorial
  </description>
  <maintainer email="ostasse@laas.fr">Olivier Stasse</maintainer>
  <license>BSD</license>

  <url>http://github.com/stack-of-tasks/dynamic-graph-tutorial</url>
  <author>Nicolas Mansard</author>
  <author>Olivier Stasse</author>

  <build_depend>dynamic-graph</build_depend>
  <build_depend>dynamic-graph-python</build_depend>
  <build_depend>git</build_depend>
  <build_depend>doxygen</build_depend>
  <!-- The following tags are recommended by REP-136 -->
  <exec_depend condition="$ROS_VERSION == 1">catkin</exec_depend>
  <exec_depend condition="$ROS_VERSION == 2">ament_cmake</exec_depend>
  <depend>boost</depend>

  <doc_depend>doxygen</doc_depend>

  <buildtool_depend>cmake</buildtool_depend>

  <export>
    <build_type>cmake</build_type>
  </export>

</package>
